# goverify

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  mise.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  nightly.yml
.superpowers/sdd/: task-1-investigation.md  task-3-investigation.md  task-3-report.md
crates/goverify-analysis/: Cargo.toml
crates/goverify-analysis/src/: checker.rs  dom.rs  effects.rs  encode.rs  engine.rs  lib.rs  prepass.rs  summary.rs  testpkg.rs
crates/goverify-analysis/tests/: encode_props.rs  engine_corpus.rs
crates/goverify-cache/: Cargo.toml
crates/goverify-cache/src/: lib.rs  query.rs  store.rs
crates/goverify-checkers/: Cargo.toml
crates/goverify-checkers/src/: bounds.rs  lib.rs  nil.rs  shared.rs  testfix.rs
crates/goverify-checkers/tests/: bounds_corpus.rs  differential_findings.rs  ensures_corpus.rs  knownfp_corpus.rs  nil_corpus.rs
crates/goverify-cli/: Cargo.toml
crates/goverify-cli/src/: main.rs  render.rs
crates/goverify-cli/tests/: cli.rs  debug_integration.rs
crates/goverify-extract/: Cargo.toml  build.rs
crates/goverify-extract/src/: lib.rs  load.rs  sidecar.rs
crates/goverify-extract/tests/: extract_integration.rs  fuzz_seeds.rs
crates/goverify-ir/: Cargo.toml
crates/goverify-ir/src/: callgraph.rs  dump.rs  func.rs  lib.rs  lower.rs  op.rs  program.rs  testutil.rs  types.rs
crates/goverify-ir/tests/: callgraph_corpus.rs  lock_kind.rs  lower_corpus.rs  lower_golden.rs  props.rs
crates/goverify-solver/: Cargo.toml
crates/goverify-solver/proptest-regressions/: reader.txt
crates/goverify-solver/src/: discharge.rs  lib.rs  printer.rs  process.rs  reader.rs  retry.rs  sort.rs  term.rs  testgen.rs  z3native.rs
crates/goverify-solver/tests/: differential.rs
crates/goverify-spec/: Cargo.toml
crates/goverify-spec/src/: lib.rs
docs/: shakeout-phase4-bbolt-findings.tsv  shakeout-phase4-bbolt.md  threat-model.md
docs/superpowers/plans/: 2026-07-16-phase1-skeleton-extractor.md  2026-07-17-phase2-ir-engine.md  2026-07-17-phase3-solver-layer.md  2026-07-18-phase4-checkers.md  2026-07-19-shakeout-triage.md  2026-07-20-fp-encoding-fixwave.md  2026-07-20-interprocedural-summaries.md  2026-07-21-summaries-followups.md  2026-07-22-followups-wave2.md  2026-07-23-phase5a-caching.md
docs/superpowers/specs/: 2026-07-16-goverify-design.md  2026-07-17-phase2-ir-engine-design.md  2026-07-17-phase3-solver-layer-design.md  2026-07-18-phase4-checkers-design.md  2026-07-19-shakeout-triage-design.md  2026-07-20-fp-encoding-fixwave-design.md  2026-07-20-interprocedural-summaries-design.md  2026-07-21-summaries-followups-design.md  2026-07-22-followups-wave2-design.md  2026-07-23-phase5-caching-design.md
extractor/: emit.go  emit_test.go  extract.go  extract_test.go  go.mod  go.sum  main.go
extractor/gvirpb/: gvir.pb.go
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gvir_decode.rs  ir_encode.rs  ir_lower.rs  smt_reader.rs
proto/gvir/v1/: gvir.proto
scripts/: shakeout.sh  shakeout_bucket.awk
scripts/testdata/shakeout_bucket/: bad.txt  expected.tsv  sample.txt
testdata/corpus/bounds/: bounds.go  go.mod
testdata/corpus/conc/: conc.go  go.mod
testdata/corpus/ensures/: ensures.go  go.mod
testdata/corpus/hello/: go.mod  hello.go
testdata/corpus/knownfp/: go.mod  knownfp.go
testdata/corpus/nil/: go.mod  nil.go
testdata/corpus/ops/: go.mod  ops.go
testdata/corpus/withdeps/: go.mod  main.go
testdata/goldens/: bounds.check.txt  conc.summary.txt  hello.ir.txt  nil.check.txt  nil.findings.txt  ops.ir.txt
