[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
prost = "0.13"
prost-build = "0.13"
clap = { version = "4", features = ["derive"] }
blake3 = "1"
tempfile = "3"
rayon = "1"
proptest = "1"
z3-sys = { version = "0.11", features = ["vendored"] }
goverify-extract = { path = "crates/goverify-extract" }
goverify-ir = { path = "crates/goverify-ir" }
goverify-analysis = { path = "crates/goverify-analysis" }
goverify-solver = { path = "crates/goverify-solver" }
goverify-cache = { path = "crates/goverify-cache" }
