[package]
name = "goverify-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
prost = "0.13"
goverify-extract = { path = "../crates/goverify-extract" }
goverify-ir = { path = "../crates/goverify-ir" }

[[bin]]
name = "gvir_decode"
path = "fuzz_targets/gvir_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_lower"
path = "fuzz_targets/ir_lower.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
