[package]
name = "goverify-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
prost = "0.13"
goverify-extract = { path = "../crates/goverify-extract" }
goverify-ir = { path = "../crates/goverify-ir" }
goverify-solver = { path = "../crates/goverify-solver" }
goverify-analysis = { path = "../crates/goverify-analysis" }

[[bin]]
name = "gvir_decode"
path = "fuzz_targets/gvir_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_lower"
path = "fuzz_targets/ir_lower.rs"
test = false
doc = false
bench = false

[[bin]]
name = "smt_reader"
path = "fuzz_targets/smt_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ir_encode"
path = "fuzz_targets/ir_encode.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
