[package]
name = "goverify-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
goverify-ir = { workspace = true }
goverify-solver = { workspace = true }
rayon = { workspace = true }

# `src/testpkg.rs` is a `#[cfg(test)]` module (shared by this crate's and
# Task 14's hand-written-package tests), not a file under `tests/`, so a
# dev-dependency is sufficient — `cfg(test)` modules in `src` can use
# dev-dependencies.
[dev-dependencies]
goverify-extract = { workspace = true }
