[package]
name = "goverify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "goverify"
path = "src/main.rs"

[dependencies]
clap.workspace = true
goverify-extract.workspace = true
goverify-ir.workspace = true
goverify-analysis.workspace = true
tempfile.workspace = true
